# prefect-playground

./: Dockerfile  README.md  cli.py  deploy.py  hello.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: test_on_pr.yml
blocks/: s3_default_block.py
flows/example_flow/: example.py
flows/multi_flow_pipeline/: explicit_first_flow.py  first_flow.py  second_flow.py
flows/polars_based_flow/: polars_flow.py
flows/scheduled_and_reaggs/: main.py
flows/test_flow/: test_flow.py
tests/: test_flow.py
