[project]
name = "prefect-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.22.0",
    "prefect[aws]>=3.1.14",
    "prefect-docker>=0.6.2",
    "typer>=0.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "pytest>=8.3.4",
]
